--- a/Automation-App/src/index.html
+++ b/Automation-App/src/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <title>Ionic App</title>
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js"></script>
   <base href="/" />
 
   <meta name="color-scheme" content="light dark" />
